@@ -1,3 +1,9 @@
+Wed, 16 Nov 2005, Amos Anderson
+1. Modified the way configuration files are handled. It is all handled by
+   a new class, QMCConfigIO, which allows you to choose whether it is
+   output in text mode or in binary. There is a flag in QMCConfigIO.cpp
+   where this setting is chosen.
+
 Mon, 7 Nov 2005, Chip Kent
 
 1. Modified the release creation script to generate the user guide in 
